version/0.67/_sources/autoapi/pyedb/grpc/database/definition/wirebond_def/ApdBondwireDef.rst.txt






:class:`ApdBondwireDef`
=======================


.. py:class:: pyedb.grpc.database.definition.wirebond_def.ApdBondwireDef(pedb, core=None)

   Bases: :py:obj:`BondwireDef`


   
   Class representing an Apd bondwire definition.
















   ..
       !! processed by numpydoc !!




.. py:currentmodule:: ApdBondwireDef

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~create`
            - Create a new Apd bondwire definition.




   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~core`
            - 


   .. tab-item:: Static methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~find_by_name`
            - Find an Apd bondwire definition by name.





Import detail
-------------

.. code-block:: python

    from pyedb.grpc.database.definition.wirebond_def import ApdBondwireDef


Attribute detail
----------------

.. py:attribute:: core
   :value: None




Method detail
-------------

.. py:method:: create(edb, name)
   :classmethod:


   
   Create a new Apd bondwire definition.


   :Parameters:

       **edb** : :class:`pyedb.edb`
           Inherited AEDT object.

       **name** : :class:`python:str`
           Name of the Apd bondwire definition.



   :Returns:

       :class:`pyedb.grpc.database.definition.wirebond_def.ApdBondwireDef`
           The created Apd bondwire definition.











   ..
       !! processed by numpydoc !!

.. py:method:: find_by_name(edb, name)
   :staticmethod:


   
   Find an Apd bondwire definition by name.


   :Parameters:

       **edb** : :class:`pyedb.edb`
           Inherited AEDT object.

       **name** : :class:`python:str`
           Name of the Apd bondwire definition.



   :Returns:

       :class:`pyedb.grpc.database.definition.wirebond_def.ApdBondwireDef` or :data:`python:None`
           The found Apd bondwire definition or None if not found.











   ..
       !! processed by numpydoc !!




